# Texas-Hold-em-poker

./: .gitignore  LICENSE  README.md  design-qa.md  pyproject.toml
checkpoints/: dqn.pt
scripts/: evaluate.py  play_demo.py  serve_web.py  train_dqn.py
tests/: test_cards_and_evaluator.py  test_dqn_smoke.py  test_env.py  test_web_table.py
texas_holdem/: __init__.py  actions.py  env.py  multiplayer.py  web_session.py
texas_holdem/agents/: __init__.py  dqn_agent.py  random_agent.py  rule_based_agent.py
texas_holdem/game/: __init__.py  cards.py  engine.py  evaluator.py  player.py
web/: app.js  index.html  styles.css
